making @postmapping consistent, also webSecurityConfig class added not implemented yet

--- a/build.gradle
+++ b/build.gradle
@@ -29,8 +29,11 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	//implementation 'org.springframework.security.web.context.AbstractSecurityWebApplicationInitializer'
+
 }
 
-tasks.named('test') {
-	useJUnitPlatform()
-}
+//tasks.named('test') {
+//	useJUnitPlatform()
+//}
