web security configuration added, now should d be able to handle login, logout

--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,12 @@ dependencies {
 	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 }
+//ext {
+//	set('spring-security-version', '5.4.2')
+//}
 
 repositories {
 	mavenCentral()
