--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.5.1",
     "bootstrap": "4.6.2",
     "chartist": "0.11.0",
+    "dompurify": "^3.0.6",
     "es6-promise": "4.2.8",
     "eslint-plugin-vue": "^9.8.0",
     "highcharts": "^11.1.0",
