--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,14 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	testImplementation ('org.springframework.boot:spring-boot-starter-test') {
+		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+	}
+	testImplementation 'org.springframework.security:spring-security-test'
 }
 //ext {
 //	set('spring-security-version', '5.4.2')
@@ -39,6 +47,6 @@ dependencies {
 
 }
 
-//tasks.named('test') {
-//	useJUnitPlatform()
-//}
+test {
+	useJUnitPlatform()
+}
